--- a/content/project/peak-fitness/index.org
+++ b/content/project/peak-fitness/index.org
@@ -2,6 +2,7 @@
 #+SITE: https://abstractionjackson.github.io/fitness-tracker-react
 #+CATEGORIES[]: fun
 #+SUMMARY: What's your strongest lift in the gym?
+#+DATE: 2024-12-10
 * Building a Fitness Tracker with React and SQLite WASM
 ** Overview
 The Fitness Tracker is a browser-based dashboard designed to help weight-training enthusiasts track their performance, with an emphasis on monitoring Personal Record (PR) weights. The application allows users to log, view, and analyze weightlifting data, providing insights into their progress over time.
