--- a/content/project/waldo/index.org
+++ b/content/project/waldo/index.org
@@ -1,7 +1,7 @@
 #+TITLE: Waldo
 #+SITE: https://aws.amazon.com/about-aws/whats-new/2022/11/aws-iot-roborunner-generally-available/
 #+CATEGORIES[]: profit
-#+SUMMARY: A 2D map of IoT devices in the warehousing and logistics space.
+#+SUMMARY: A 2D map of IoT devices in the warehousing and logistics space. Pixi.js animations capable of rendering hundreds of workers in a single frmae. Robust status indicator and peripheral metadata support.
 #+DATE: 2022-09-30
 #+ORDER: 1
 * Developing Waldo: A 2D Map Client for AWS IoT RoboRunner
